css/style.css
/* @import url("bulma.css"); */
@font-face {
	font-family: 'MasionNeue-Book';
	src: 
		local('MaisonNeue-Book'),
		local('MaisonNeue Book'),
		url('fonts/maisonneuebook.ttf') 
		format('truetype');
}
@font-face {
	font-family: 'MasionNeue-mono';
	src: 
		local('MaisonNeue-Mono'),
		local('MaisonNeue Mono'),
		url('fonts/maisonneuemono.ttf') 
		format('truetype');
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-size: 20px;
  font-family: "MaisonNeue-Book", sans-serif;
  /* min-width: 100vw; */
  /* background: rgba(0, 0, 0, 0); */
}

.opening {
  font-family: "MaisonNeue-Mono", monospace;
  font-size: 20px;
}

footer {
  min-width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: relative;
  bottom: 0;
}
footer li {
  margin: 0;
  padding-bottom: 2px;
}

#top, #about, #work, #contact, #resume {
  min-height: 100vh;
  text-align: center;
}

main {
  min-width: 100%;
  display: flex;
  flex-direction: column;
}

header {
  min-width: 100%;
}

/* nav {
  align-self: flex-end;
} */

/* .hero {
  background: url(img/rainy-cafe.gif);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment:fixed;
  color: rgb(226, 226, 226);
} */
div.container {
  min-width: 100%;
  background: url(../img/rainy-cafe-copy.gif) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: rgb(226, 226, 226);
  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
  overflow: hidden;
}

.sticky {
  position: fixed;
  bottom: 0;
  z-index: 1;
  
}

nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-basis: 25%;
  margin: 0;
  padding: 0;
  min-height: 60px;
}


a {
  text-decoration-style: dotted; 
  color: black;
  background: rgb(216, 216, 129);
}

a:hover {
  color: white;
  background: black;
  min-height: 40px;
}
nav {
  background: rgba(216,216,129, 0.55);
  font-family: "MaisonNeue-Mono", monospace;
  font-size: 28px;
}
nav a {
  color: black !important;
  text-decoration: none;
  background: none;
}

ul {
  list-style: none;
  margin: 0;
}

section.hero {
  display: flex;
  /* flex-direction: column; */
  /* justify-content: flex-start; */
  align-content: space-around;
  /* background: rgba(0, 0, 0, 0.20); */
}

section.hero p {
  min-height: 45px;
  background: rgba(0, 0, 0, 0.55);
  padding: 15px 10px 0;
  margin: 0;
} 

svg {
  background: white;
  color: black;
}

svg:hover{
  color: white;
  background: black;
}

embed {
  display: block;
  margin: 0 auto;
  width: 60vw;
  height: 70vh;
}
h1, h2, h3, h4, h5, h6 {
  font-family: "MaisonNeue-Mono", monospace;
}

/* label color */
.input-field label {
  color: #fff;
}
/* label focus color */
.input-field input[type=text]:focus + label {
  color: #26a69a !important;
}
/* label underline focus color */
.input-field input[type=text]:focus {
  border-bottom: 1px solid #26a69a !important;
  box-shadow: 0 1px 0 0 #000;
}
/* valid color */
.input-field input[type=text].valid {
  border-bottom: 1px solid #000;
  box-shadow: 0 1px 0 0 #000;
}
/* invalid color */
.input-field input[type=text].invalid {
  border-bottom: 1px solid #000;
  box-shadow: 0 1px 0 0 #000;
}
/* icon prefix focus color */
.input-field .prefix.active {
  color: #26a69a !important;
}

/* Textarea form styling */
/* label focus color */
.input-field textarea:focus + label {
  color: #26a69a !important;
}
/* label underline focus color */
.input-field textarea:focus {
  border-bottom: 1px solid #26a69a !important;
  box-shadow: 0 1px 0 0 #000;
}

.btn {
  background-color: #26a69a;
}

.btn:focus {
  background-color: #00897b;
}

.user-input {
  color: white;
}

.skills {
  margin: 0 auto;
}

.collapsible-header {
  font-family: "MaisonNeue-Mono", monospace;
  background-color: rgb(216, 216, 129);
  color: #0f0f0f !important;
}

/* .card {
  background: none !important; 
  color: rgb(216, 216, 129) !important;
  z-index: 0;
} */

